--- a/Intro_to_Weights_&_Biases.ipynb
+++ b/Intro_to_Weights_&_Biases.ipynb
@@ -7,10 +7,8 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/wandb/examples/blob/master/colabs/intro/Intro_to_Weights_&_Biases.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
-    "<!--- @wandbcode{intro-colab} -->\n",
-    "\n",
-    "[![Open In Studio Lab](https://studiolab.sagemaker.aws/studiolab.svg)](https://studiolab.sagemaker.aws/import/github/wandb/examples/blob/master/colabs/intro/Intro_to_Weights_&_Biases.ipynb)"
+    "[![Open In Studio Lab](https://studiolab.sagemaker.aws/studiolab.svg)](https://studiolab.sagemaker.aws/import/github/tcapelle/smslab_intro/blob/master/Intro_to_Weights_&_Biases.ipynb)\n",
+    "<!--- @wandbcode{intro-colab-sagemaker} -->"
    ]
   },
   {
