--- a/Intro_to_Weights_&_Biases.ipynb
+++ b/Intro_to_Weights_&_Biases.ipynb
@@ -57,11 +57,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🪄 Install `wandb` library and login\n",
+    "## 🪄 Login to `wandb`\n",
     "\n",
     "\n",
-    "Start by installing the library and logging in to your free account.\n",
-    "\n"
+    "Start by logging in to your free account."
    ]
   },
   {
@@ -70,7 +69,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install wandb -qqq\n",
     "import wandb"
    ]
   },
